# mu-data-products

./: CMakeLists.txt  README.md
cmake/: DataProductsConfig.cmake.in
examples/: simple_analysis.ipynb
include/data_products/: LinkDef.h
include/data_products/common/: DataProduct.hh  RecoConfig.hh  TestbeamHelpers.hh
include/data_products/fc7/: FC7Header.hh
include/data_products/nalu/: EventFooter.hh  EventHeader.hh  NaluEventFooter.hh  NaluEventHeader.hh  NaluODB.hh  NaluPacket.hh  NaluPacketFooter.hh  NaluPacketHeader.hh  NaluTime.hh  NaluWaveform.hh  ODB.hh  Packet.hh  PacketFooter.hh  PacketHeader.hh  Time.hh  Waveform.hh
include/data_products/wfd5/: ChannelHeader.hh  ClusteredHits.hh  FC7Header.hh  ODB.hh  RFWaveformFit.hh  TimeSeed.hh  WFD5ChannelHeader.hh  WFD5FC7Header.hh  WFD5Header.hh  WFD5ODB.hh  WFD5WFD5Header.hh  WFD5Waveform.hh  WFD5WaveformFit.hh  WFD5WaveformHeader.hh  Waveform.hh  WaveformHeader.hh  WaveformIntegral.hh
include/nalu/: NaluEventFooter.hh  NaluEventHeader.hh  NaluODB.hh  NaluPacket.hh  NaluPacketFooter.hh  NaluPacketHeader.hh  NaluTime.hh  NaluWaveform.hh
scripts/: build.sh  cleanup.sh  setenv.sh  unsetenv.sh
src/: CMakeLists.txt
src/common/: DataProduct.cc  RecoConfig.cc
src/fc7/: FC7Header.cc
src/nalu/: EventFooter.cc  EventHeader.cc  NaluEventFooter.cc  NaluEventHeader.cc  NaluODB.cc  NaluPacket.cc  NaluPacketFooter.cc  NaluPacketHeader.cc  NaluTime.cc  NaluWaveform.cc  ODB.cc  Packet.cc  PacketFooter.cc  PacketHeader.cc  Time.cc  Waveform.cc
src/wfd5/: ChannelHeader.cc  ClusteredHits.cc  CubicSpline.cc  FC7Header.cc  ODB.cc  RFWaveformFit.cc  TimeSeed.cc  WFD5ChannelHeader.cc  WFD5FC7Header.cc  WFD5Header.cc  WFD5ODB.cc  WFD5WFD5Header.cc  WFD5Waveform.cc  WFD5WaveformFit.cc  WFD5WaveformHeader.cc  Waveform.cc  WaveformHeader.cc  WaveformIntegral.cc
